--- a/Styles/Portfolio.css
+++ b/Styles/Portfolio.css
@@ -8,6 +8,10 @@
     "width" 100;
 }
 /* shared style */
+.secondary-bg{
+  background-color: #FFF8F3;
+  
+}
   .text-primary{
     color:#FD6E0A ;
   }
@@ -68,4 +72,33 @@ nav li a {
 }
 .banner-profile-picture{
     width: 580px;
+}
+/* main style */
+main{
+  max-width: 1140px;
+  margin: 0 auto;
+}
+.section-title{
+  font-weight: bold;
+  font-size: 35px;
+  color: #181818;
+}
+.section-description{
+  font-size: 18px;
+  color:#757575;
+}
+/* about style */
+.about{
+  border-radius: 10px;
+  padding: 130px 150px;
+  text-align: center;
+  margin-top: 130px;
+
+}
+.item-description{
+  font-weight: 600;
+}
+.about-item{
+  display: flex;
+  justify-content: space-around;
 }
