--- a/Styles/Portfolio.css
+++ b/Styles/Portfolio.css
@@ -8,6 +8,9 @@
     "width" 100;
 }
 /* shared style */
+.text-center{
+  text-align: center;
+}
 .secondary-bg{
   background-color: #FFF8F3;
   
@@ -78,6 +81,11 @@ main{
   max-width: 1140px;
   margin: 0 auto;
 }
+main section{
+  margin-top: 130px;
+  margin-bottom: 130px;
+
+}
 .section-title{
   font-weight: bold;
   font-size: 35px;
@@ -101,4 +109,14 @@ main{
 .about-item{
   display: flex;
   justify-content: space-around;
+}
+/* skill-section container */
+.skills-container{
+  display: flex;
+  gap: 24px;
+}
+.skill{
+  padding: 30px;
+  box-shadow: 0px 6px 60px rgba(0, 0, 0, 0.06);
+  border-radius: 5px;
 }
